<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">易赚ATM</string>
    <string name="action_settings">Settings</string>
    <string name="rules_1"> 1.您的好友只要在您发给的红包页面领取新手红包，下载积分墙后便成为您的粉丝；</string>
    <string name="rules_2"> 2.您的粉丝完成任务时，您最高可获得40%的(如您的一位粉丝完成10元奖金的任务，您最高可以获得4元现金）</string>
    <string name="rules_3"> 3. 粉丝的粉丝完成任务您也可以获得相应比例的收益粉丝奖励传递无上限。</string>
    <string name="rules_4"> 4.举例说明您每天邀请1为好友成为您的粉丝，您的粉丝每天再邀请一人，按没人每天赚10元钱，那么</string>
    <string name="app_introduce">  积分墙作为一款连接用户和推广需求的专业平台，旨在做广告推广的同时为广大用户提供一根相当可观的兼职工作，仅需要利用平时生活中的零散时间，利用大家的人脉和自媒体的推广能力，便在为产品宣传的同时获得高额稳定的收入，零风险，零投入而带来的是高回报！</string>
    <string name="sign_introduce1">1.每天签到时间为00:01到23:59</string>
    <string name="sign_introduce2">2.首日签到得0.1元,连续签到第15天得3元,连续签到30天奖励6元。</string>
    <string name="sign_introduce3">3.连续签到中断需要重头开始签到</string>
    <string name="sign_introduce4">4.签到奖励金额自动存入易赚账户中。</string>
    <string name="about_ours">    积分墙作为一个全民赚钱平台，利用其独有的微信提现、一秒到账技术，仅上线第一个月，累计发放奖金就已经超过了120万元，数万用户成功在积分墙赚到了第一桶金。积分墙旨在给广大用户提供一个赚的多，提现快的兼职平台，点击提现后一秒钟就会把奖金发到您的微信钱包中。
赚800以其简单的任务形式、超低的提现门槛和极快的提现速度受到了广大用户的一致好评，短短三个月的时间内就积累了将近30万名的忠实粉丝，积分墙用它的高品质与高收益赢得了广大用户的认可。
积分墙的任务以朋友圈分享阅读，注册试用，关注公众号，小游戏等为主，动动手指将有趣的链接分享到朋友圈或微信群，只要有人点击你就有钱赚，每次点击都有0.1元入账，好友二次分享后的阅读也给你增加收入，数量超过十次还有额外奖励，轻轻松松就能赚几十元、上百元。每天躺着玩一会儿积分墙，你就会得到丰厚的零花钱！这将是一个千万用户共同打造的全民high玩赚钱平台。
对于企业用户：积分墙是一种按效果计费的推广平台，企业可以根据自己的预算、目标用户数做品牌广告投放，并根据平台上完成任务数字、次日留存率等数据，实时评估广告费的投入产出比。
对于个人用户：积分墙是一款让你在玩手机的同时能够赚到钱的应用。用户只要从积分墙获取推广链接分享到社交媒体中，任何用户（包括您自己）经过您的推广链接产生以下行为（购买、注册、安装、浏览、转发）就可得到由广告主支付的佣金。简单来说，用户可以通过分享有趣的内容来挣钱。
</string>

    <string name="how_to_make_money">教你如何兼职赚钱</string>
    <string name="make_money_1">1.新用户可以通过积分墙首页的新手红包连接领取新手专享现金红包</string>
    <string name="make_money_2">2.使用手机号注册登录或者微信登录，以便微信现金红包直接发给你，</string>
    <string name="make_money_3">3.在任务列表中找到您喜欢的任务，点击查看详情步骤</string>
    <string name="make_money_4">4.按照步骤完成任务后回到积分墙，点击提交任务获得现金奖励</string>
    <string name="make_money_5">5.您可以在收益界面查看您的收益并提现到您的微信账户</string>
    <string name="make_money_tip">温馨提示:如果您每天想都有一千元以上的收入，您可以在收益界面或者任务详情界面邀请好友一起赚钱，让他成为您的粉丝，您将额外获得所有粉丝的收入最高40%的现金奖励</string>

    <string name="gf_qqun">积分墙官方QQ群:</string>
    <string name="kefu_qq">客服QQ:</string>
    <string name="contact_qqun">10234654</string>
    <string name="contact_qq">10234654</string>

    <string name="comment_problem_title">常见问题</string>
    <string name="comment_problem_1">1.为什么我们不能领取新手红包</string>
    <string name="comment_problem_1_result">新手红包仅限于未注册过积分墙的新用户，且每个手机号只能领一次。</string>
    <string name="comment_problem_2">2.为什么我们不能领取新手红包</string>
    <string name="comment_problem_2_result">新手红包仅限于未注册过积分墙的新用户，且每个手机号只能领一次。</string>


    <!-- XListView上下拉刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 帮助中心 -->
    <string name="no_help_center">1.为什么没有登录注册界面</string>
    <string name="why_no_help_center">下载易赚APP之后进入首页，系统就会自动分配给您一个ID,但您必须进入新手任务里面绑定手机号码</string>
    <string name="do_task">2.为什么要先做新手任务？</string>
    <string name="why_do_task">新手任务是为了让我们了解我们平台是一个真正的赚钱平台，同时我们必须绑定手机，微信，或者支付宝，这样一来方便您日后做其他任务或者提现</string>
    <string name="un_withdraw">3.为什么提现不了？</string>
    <string name="why_un_withdraw1">1.没有绑定微信，支付宝，或者手机</string>
    <string name="why_un_withdraw2">2.账户余额不足，无法提现</string>
    <string name="why_un_withdraw3">3.聚钱庄里面的余额需要转到余额里面才能够提现。如果有其他什么问题跟我们联系。</string>
    <string name="un_update_phone">4.为什么手机号不能绑定，不能修改？</string>
    <string name="why_un_update_phone">每个手机号在易赚里面只能绑定一次，请确认您的手机号在易赚里面有没使用过。</string>
    <!-- 帮助中心 -->
    <string name="how_to_earn">1.为什么没有登录注册界面</string>

    <!-- 点入积分墙 -->
    <string name="app_key">00005D3E2800002E</string>
</resources>
