<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
  <RelativeLayout
      android:layout_width="match_parent"
      android:background="@color/red"
      android:layout_height="50dp">
      <TextView
          android:layout_width="wrap_content"
          android:text="帮助中心"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:layout_centerInParent="true"
          android:layout_height="wrap_content" />
      <RelativeLayout
          android:id="@+id/rtl_back"
          android:layout_width="60dp"
          android:onClick="back"
          android:layout_height="match_parent">
          <ImageView
              android:layout_width="wrap_content"
              android:background="@mipmap/g_fanhui"
              android:layout_centerInParent="true"
              android:layout_height="wrap_content" />
      </RelativeLayout>
  </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/no_help_center"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/why_no_help_center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/do_task"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/why_do_task"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/un_withdraw"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/why_un_withdraw1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:text="@string/why_un_withdraw2"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:text="@string/why_un_withdraw3"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/un_update_phone"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/why_un_update_phone"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
