<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="Fragments.GetFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="常见问题"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <ImageView
            android:onClick="back"
            android:layout_width="wrap_content"
            android:background="@mipmap/g_fanhui"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/comment_problem_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/comment_problem_1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/comment_problem_1_result"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/comment_problem_2"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/comment_problem_2_result"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>>

</LinearLayout>
