<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="点击虚线框拷贝关键字"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:background="@mipmap/y_yaoqinghaoyou"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="邀请好友可获得高额粉丝收益"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="粉丝奖励规则"
            android:textColor="@color/black"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@mipmap/y_zhenbang"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/rules_1"
            android:layout_marginLeft="10dp"
            android:textSize="11sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/rules_2"
            android:layout_marginLeft="10dp"
            android:textSize="11sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/rules_3"
            android:layout_marginLeft="10dp"
            android:textSize="11sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/rules_4"
            android:layout_marginLeft="10dp"
            android:textSize="11sp"
            android:layout_height="wrap_content" />
    </LinearLayout>s
</LinearLayout>
