<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:background="@color/red"
        android:layout_height="20dp"></View>
  <RelativeLayout
      android:layout_width="match_parent"
      android:background="@color/red"
      android:layout_height="50dp">
      <TextView
          android:layout_width="wrap_content"
          android:text="签到赚积分"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:layout_centerInParent="true"
          android:layout_height="wrap_content" />
      <RelativeLayout
          android:id="@+id/rtl_back"
          android:layout_width="60dp"
          android:onClick="back"
          android:layout_height="match_parent">
          <ImageView
              android:layout_width="wrap_content"
              android:background="@mipmap/g_fanhui"
              android:layout_centerInParent="true"
              android:layout_height="wrap_content" />
      </RelativeLayout>
  </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_white_bg"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="35dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="cai阿姨"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/gray"
                    android:layout_height="0.2dp"></View>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">
                    <TextView
                        android:id="@+id/tv_yjqd"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="您已连续签到"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_day_num"
                        android:layout_toRightOf="@+id/tv_yjqd"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/red"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_toRightOf="@+id/tv_day_num"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="天"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/gray"
                    android:layout_height="0.2dp"></View>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">
                    <TextView
                        android:id="@+id/tv_zgqd"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="本月总共签到"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/tv_all_day_num"
                        android:layout_toRightOf="@+id/tv_zgqd"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="0"
                        android:textSize="18sp"
                        android:textColor="@color/red"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_toRightOf="@+id/tv_all_day_num"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="天"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/gray"
                    android:layout_height="0.2dp"></View>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_white_bg"
                android:layout_height="200dp">
                <Views.SignCalendar
                    android:id="@+id/sc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true" >
                </Views.SignCalendar>
            </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_white_bg"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="签到说明"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="0.2dp"></View>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/sign_introduce1"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/sign_introduce2"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/sign_introduce3"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/sign_introduce4"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
            <RelativeLayout
                android:id="@+id/rtl_sign"
                android:layout_width="130dp"
                android:background="@drawable/round_red_bg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="马上签到"
                    android:textSize="18sp"
                    android:textColor="@drawable/white2gray_seleclor"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
